Fix for lastfm token in router hash mode. Fix for relative paths in index.html.

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,8 +11,8 @@
     <!-- <link rel="apple-touch-icon" href="./dist/favicon/apple-touch-icon.png">
         <link rel="shortcut icon" href="./dist/favicon/favicon.ico" type="image/x-icon"> -->
 
-    <link rel="stylesheet" href="/dist/css/vendor.css">
-    <link rel="stylesheet" href="/dist/css/main.css">
+    <link rel="stylesheet" href="./dist/css/vendor.css">
+    <link rel="stylesheet" href="./dist/css/main.css">
 </head>
 
 <body>
@@ -22,9 +22,9 @@
 
     <div id='vueApp'></div>
 
-    <script defer src="/dist/js/vendor.js"></script>
+    <script defer src="./dist/js/vendor.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
-    <script async src="/dist/js/app.js"></script>
+    <script async src="./dist/js/app.js"></script>
 </body>
 
 </html>
