--- a/assets/index.html
+++ b/assets/index.html
@@ -22,9 +22,9 @@
 
     <div id='vueApp'></div>
 
-    <script defer src="./dist/js/vendor.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
-    <script async src="./dist/js/app.js"></script>
+    <script src="./dist/js/vendor.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+    <script src="./dist/js/app.js"></script>
 </body>
 
 </html>
