Added css vendors, font awesome js, moment js

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
   </body>
 </html>
